--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="buildQuiz()">
     <div class="container">
         <div class="header">
-            <h2 class="question">VERY LONG QUESTION SENTENCE VERY LONG QUESTION SENTENCE VERY LONG QUESTION SENTENCE VERY LONG QUESTION SENTENCE</h2>
-            <ul>
-                <li><input type="radio" id="a" name="answer"><label for="a" id="a_text">answer</label></li>
-                <li><input type="radio" id="b" name="answer"><label for="b" id="b_text">answer</label></li>
-                <li><input type="radio" id="c" name="answer"><label for="c" id="c_text">answer</label></li>
-                <li><input type="radio" id="d" name="answer"><label for="d" id="d_text">answer</label></li>
+            <h2 class="question" id="question"></h2>
+            <ul id="input">
+                <li><input type="radio" id="a" name="answer"><label for="a" id="a_text"></label></li>
+                <li><input type="radio" id="b" name="answer"><label for="b" id="b_text"></label></li>
+                <li><input type="radio" id="c" name="answer"><label for="c" id="c_text"></label></li>
+                <li><input type="radio" id="d" name="answer"><label for="d" id="d_text"></label></li>
             </ul>
         </div>
-        <button class="submit-button">Next Question</button>
+        <button class="submit-button" id="submit">Next Question</button>
     </div> 
     <script src="script.js"></script>
 </body>
